--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -129,7 +129,7 @@
           <bool>true</bool>
          </property>
          <property name="showGrid">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="sortingEnabled">
           <bool>true</bool>
