--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -230,7 +230,7 @@
     <widget class="QLineEdit" name="textInput"/>
    </item>
    <item row="1" column="2">
-    <widget class="QPushButton" name="filterButtton">
+    <widget class="QPushButton" name="searchButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
