--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -227,7 +227,14 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QLineEdit" name="textInput"/>
+    <widget class="QLineEdit" name="textInput">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>43</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="searchButton">
