--- a/ui/config-edit.ui
+++ b/ui/config-edit.ui
@@ -21,7 +21,7 @@
    <string>Preference Settings</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../dchat.qrc">
+   <iconset>
     <normaloff>:/dchatlogo.png</normaloff>:/dchatlogo.png</iconset>
   </property>
   <property name="modal">
@@ -38,6 +38,12 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>43</height>
+        </size>
+       </property>
        <property name="text">
         <string>Save</string>
        </property>
@@ -50,6 +56,12 @@
          <horstretch>10</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>43</height>
+        </size>
        </property>
        <property name="text">
         <string>Cancel</string>
@@ -88,16 +100,11 @@
      <attribute name="headerVisible">
       <bool>true</bool>
      </attribute>
-     <attribute name="headerVisible">
-      <bool>true</bool>
-     </attribute>
     </widget>
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="1" margin="1"/>
- <resources>
-  <include location="../dchat.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
