update definitions connection tab

--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="6">
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="labeltrusted">
      <property name="font">
       <font>
        <pointsize>12</pointsize>
@@ -29,7 +29,7 @@
     </widget>
    </item>
    <item row="0" column="6" colspan="4">
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="labeltrecommended">
      <property name="font">
       <font>
        <pointsize>12</pointsize>
@@ -43,7 +43,7 @@
     </widget>
    </item>
    <item row="0" column="10" colspan="2">
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="labelrpisodiv">
      <property name="font">
       <font>
        <pointsize>12</pointsize>
@@ -64,7 +64,7 @@
     </widget>
    </item>
    <item row="1" column="5">
-    <widget class="QSpinBox" name="ipdrop_4">
+    <widget class="QSpinBox" name="ipdroptrusted">
      <property name="toolTip">
       <string>IP-connections of your devices are dropped for sync-balancing reasons each X minutes (10-30).</string>
      </property>
@@ -87,7 +87,7 @@
     </widget>
    </item>
    <item row="1" column="9">
-    <widget class="QSpinBox" name="ipdrop_3">
+    <widget class="QSpinBox" name="ipdroprecommended">
      <property name="toolTip">
       <string>IP-connections of your devices are dropped for sync-balancing reasons each X minutes (10-30).</string>
      </property>
@@ -113,7 +113,7 @@
     </widget>
    </item>
    <item row="1" column="11">
-    <widget class="QSpinBox" name="ipdrop_2">
+    <widget class="QSpinBox" name="ipdropepisodic">
      <property name="toolTip">
       <string>IP-connections of your devices are dropped for sync-balancing reasons each X minutes (10-30).</string>
      </property>
@@ -129,7 +129,7 @@
     </widget>
    </item>
    <item row="2" column="0" colspan="6">
-    <widget class="QTreeWidget" name="treeWidget">
+    <widget class="QTreeWidget" name="treeWidget_trusted">
      <attribute name="headerDefaultSectionSize">
       <number>100</number>
      </attribute>
@@ -151,7 +151,7 @@
     </widget>
    </item>
    <item row="2" column="6" rowspan="8" colspan="4">
-    <widget class="QTreeWidget" name="treeWidget_2">
+    <widget class="QTreeWidget" name="treeWidget_recommended">
      <attribute name="headerDefaultSectionSize">
       <number>100</number>
      </attribute>
@@ -173,7 +173,7 @@
     </widget>
    </item>
    <item row="2" column="10" rowspan="7" colspan="2">
-    <widget class="QTreeWidget" name="treeWidget_3">
+    <widget class="QTreeWidget" name="treeWidget_episodic">
      <attribute name="headerDefaultSectionSize">
       <number>100</number>
      </attribute>
@@ -202,7 +202,7 @@
     </widget>
    </item>
    <item row="3" column="1" colspan="3">
-    <widget class="QLineEdit" name="addip_4">
+    <widget class="QLineEdit" name="addipinternal">
      <property name="palette">
       <palette>
        <active>
@@ -284,7 +284,7 @@
     </widget>
    </item>
    <item row="3" column="4" colspan="2">
-    <widget class="QSpinBox" name="myport_3">
+    <widget class="QSpinBox" name="myportinternal">
      <property name="toolTip">
       <string>You need to forward this port in your NAT/router, if you want to connect.</string>
      </property>
@@ -304,7 +304,7 @@
     </widget>
    </item>
    <item row="4" column="1" colspan="3">
-    <widget class="QLineEdit" name="addip_3">
+    <widget class="QLineEdit" name="addipexternal">
      <property name="palette">
       <palette>
        <active>
@@ -386,7 +386,7 @@
     </widget>
    </item>
    <item row="4" column="4" colspan="2">
-    <widget class="QSpinBox" name="myport_2">
+    <widget class="QSpinBox" name="myportexternal">
      <property name="toolTip">
       <string>You need to forward this port in your NAT/router, if you want to connect.</string>
      </property>
@@ -399,21 +399,21 @@
     </widget>
    </item>
    <item row="5" column="0" colspan="5">
-    <widget class="QLabel" name="labelurldelay_3">
+    <widget class="QLabel" name="labelurldelay">
      <property name="text">
       <string>URL-Delay (Sec):</string>
      </property>
     </widget>
    </item>
    <item row="5" column="5">
-    <widget class="QSpinBox" name="urldelay_3">
+    <widget class="QSpinBox" name="urldelay">
      <property name="toolTip">
       <string>An URLs is transferred each X seconds to each connection. Delay defines the used bandwidth. 0 means as fast as possible.</string>
      </property>
     </widget>
    </item>
    <item row="8" column="0" colspan="2">
-    <widget class="QLineEdit" name="addip_2">
+    <widget class="QLineEdit" name="addbootipv4">
      <property name="palette">
       <palette>
        <active>
@@ -495,7 +495,7 @@
     </widget>
    </item>
    <item row="8" column="2">
-    <widget class="QSpinBox" name="addport_2">
+    <widget class="QSpinBox" name="addbootportv4">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -581,7 +581,7 @@
     </widget>
    </item>
    <item row="8" column="3" colspan="3">
-    <widget class="QPushButton" name="buttonboot_2">
+    <widget class="QPushButton" name="buttonbootipv4">
      <property name="toolTip">
       <string>Boot with an IP+Port, if the IP-cache is empty or outdated.</string>
      </property>
@@ -591,7 +591,7 @@
     </widget>
    </item>
    <item row="9" column="0" colspan="3">
-    <widget class="QSpinBox" name="addport_3">
+    <widget class="QSpinBox" name="adddeviceid">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -677,7 +677,7 @@
     </widget>
    </item>
    <item row="9" column="3" colspan="3">
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="pushButton_adddeviceid">
      <property name="toolTip">
       <string>Enter the Device-IP, the DHT will find the current IP.</string>
      </property>
@@ -687,7 +687,7 @@
     </widget>
    </item>
    <item row="11" column="0" colspan="3">
-    <widget class="QSpinBox" name="addport_5">
+    <widget class="QSpinBox" name="adddyndns">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -773,7 +773,7 @@
     </widget>
    </item>
    <item row="11" column="3" colspan="3">
-    <widget class="QPushButton" name="pushButton_4">
+    <widget class="QPushButton" name="pushButton_adddyndns">
      <property name="toolTip">
       <string>Add DynDNS URL for any IP to the trusted Cache.</string>
      </property>
@@ -783,7 +783,7 @@
     </widget>
    </item>
    <item row="11" column="6">
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="pushButton_remove">
      <property name="toolTip">
       <string>Removes a trusted IP from the list.</string>
      </property>
@@ -793,7 +793,7 @@
     </widget>
    </item>
    <item row="11" column="7">
-    <widget class="QPushButton" name="pushButton_5">
+    <widget class="QPushButton" name="pushButton_iptransfer">
      <property name="toolTip">
       <string>Asks connected devices for their trusted, recommended and episodic Device-IP-Lists. Trusted Devices are transfered to Recommended List. All other into Episodic List.</string>
      </property>
@@ -803,7 +803,7 @@
     </widget>
    </item>
    <item row="11" column="8" colspan="2">
-    <widget class="QPushButton" name="pushButton_7">
+    <widget class="QPushButton" name="pushButton_copyid">
      <property name="toolTip">
       <string>Copy your Device-ID to the clipboard</string>
      </property>
@@ -813,7 +813,7 @@
     </widget>
    </item>
    <item row="12" column="0" colspan="3">
-    <widget class="QSpinBox" name="addport_6">
+    <widget class="QSpinBox" name="addbootipv6">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -899,7 +899,7 @@
     </widget>
    </item>
    <item row="12" column="3" colspan="3">
-    <widget class="QPushButton" name="pushButton_6">
+    <widget class="QPushButton" name="pushButton_bootipv6">
      <property name="toolTip">
       <string>Boot with any online IPv6 Adress</string>
      </property>
@@ -909,7 +909,7 @@
     </widget>
    </item>
    <item row="12" column="6" colspan="4">
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="pushButton_addtotrusted">
      <property name="toolTip">
       <string>Adds an IP from recommended or episodic list to trusted list.</string>
      </property>
@@ -926,7 +926,7 @@
     </widget>
    </item>
    <item row="12" column="11">
-    <widget class="QSpinBox" name="ipcachesize_3">
+    <widget class="QSpinBox" name="ipcachesize">
      <property name="toolTip">
       <string>Amount of IP-adresses in your IP-cache (1500-5000). Rise up, if all IP-adresses are outdated or offline and connections fail after a start.  Then each minute a request is sent to the boot-IP-connections, to fill the cache for 100%.</string>
      </property>
@@ -942,7 +942,7 @@
     </widget>
    </item>
    <item row="11" column="10" colspan="2">
-    <widget class="QCheckBox" name="checkBox">
+    <widget class="QCheckBox" name="checkboxdisableepisodic">
      <property name="text">
       <string>Disable Episodic Device Connections</string>
      </property>
