--- a/ui/config-edit.ui
+++ b/ui/config-edit.ui
@@ -47,6 +47,16 @@
        <property name="text">
         <string>Save</string>
        </property>
+       <property name="icon">
+        <iconset resource="../arado.qrc">
+         <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item>
@@ -65,6 +75,16 @@
        </property>
        <property name="text">
         <string>Cancel</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../arado.qrc">
+         <normaloff>:/images/back.png</normaloff>:/images/back.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -105,6 +125,8 @@
   </layout>
  </widget>
  <layoutdefault spacing="1" margin="1"/>
- <resources/>
+ <resources>
+  <include location="../arado.qrc"/>
+ </resources>
  <connections/>
 </ui>
