--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -965,11 +965,23 @@
      <property name="text">
       <string>Save</string>
      </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
     </widget>
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="2" margin="2"/>
- <resources/>
+ <resources>
+  <include location="../arado.qrc"/>
+ </resources>
  <connections/>
 </ui>
