--- a/ui/entry-form.ui
+++ b/ui/entry-form.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>URL</string>
+      <string>URL:</string>
      </property>
     </widget>
    </item>
@@ -29,12 +29,18 @@
        <verstretch>5</verstretch>
       </sizepolicy>
      </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>24</height>
+      </size>
+     </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Title / Description</string>
+      <string>Title / Description:</string>
      </property>
     </widget>
    </item>
@@ -72,6 +78,16 @@
      <property name="text">
       <string>Close</string>
      </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/back.png</normaloff>:/images/back.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>24</width>
+       <height>24</height>
+      </size>
+     </property>
     </widget>
    </item>
    <item row="6" column="0">
@@ -84,6 +100,16 @@
      </property>
      <property name="text">
       <string>Clear</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/wizard.png</normaloff>:/images/wizard.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>24</width>
+       <height>24</height>
+      </size>
      </property>
     </widget>
    </item>
@@ -98,12 +124,22 @@
      <property name="text">
       <string>Save</string>
      </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>24</width>
+       <height>24</height>
+      </size>
+     </property>
     </widget>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>Keywords</string>
+      <string>Keywords:</string>
      </property>
     </widget>
    </item>
